force-app/main/default/objects/Whats_App_History__c/Whats_App_History__c.object-meta.xml
<CustomObject>
    <label>Whats App History</label>
    <nameField>
        <displayFormat>WH-{0000}</displayFormat>
        <label>Whats App History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Whats App Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>