force-app/main/default/objects/Whats_App_History__c/fields/MediaCaption__c.field-meta.xml
<CustomField>
    <fullName>MediaCaption__c</fullName>
    <label>MediaCaption</label>
    <length>30</length>
    <type>Text</type>
</CustomField>