force-app/main/default/objects/Whats_App_History__c/fields/MediaLink__c.field-meta.xml
<CustomField>
    <fullName>MediaLink__c</fullName>
    <label>MediaLink</label>
    <type>Url</type>
</CustomField>