force-app/main/default/objects/Whats_App_History__c/fields/MessageType__c.field-meta.xml
<CustomField>
    <fullName>MessageType__c</fullName>
    <label>MessageType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>