force-app/main/default/objects/Whats_App_History__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>PhoneNumber</label>
    <type>Phone</type>
</CustomField>